# aoc2023

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  bench.sh  pyproject.toml  setup.cfg  setup.py
aoc/: __init__.py
aoc/y2023/: __init__.py  __version__.py  day0.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  get_test.py  mark24.py  score.py  utils.py
test/: test_day0.py  test_day1.py  test_day10.py  test_day2.py  test_day6.py  test_day7.py  test_day8.py
