# based on https://packaging.python.org/tutorials/packaging-projects/ as of March 2023

[metadata]
name = aoc2023
version = attr: aoc.y2023.__version__
author = Ryan Crawford
author_email = rcrawford@exptechinc.com
description = Solutions to the 2023 Advent of Code competition.
long_description = file: README.md
long_description_content_type = text/markdown
url = NA
project_urls =
    Bug Tracker = NA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# TODO: edit this list based on your package needs!
install_requires =
    numpy
    black
    pylint
    isort
    bs4
    requests

package_dir =
    = .
packages = find_namespace:
python_requires = >=3.8


[options.extras_require]
test =
    pylint
    pytest
    pytest-cov

[options.packages.find]
include =
    aoc.y2023
    aoc.y2023.*

[options.entry_points]
console_scripts =
  run_day0 = aoc.y2023.day0:main
  run_score = aoc.y2023.score:main
  run_day1 = aoc.y2023.day1:main
  run_day2 = aoc.y2023.day2:main
  run_day3 = aoc.y2023.day3:main
  run_day4 = aoc.y2023.day4:main
